Fix: updated workaround for image distortion issue

--- a/client/style.css
+++ b/client/style.css
@@ -123,16 +123,167 @@ body {
 }
 
 /* SINGLE BUSINESS COMPONENT */
+#loader {
+  width: 100vw;
+}
+
+#bg-image-business {
+  background-color: #182c3a;
+}
+
+@media screen and (min-width: 601px) {
+  #img-carousel {
+    width: 100vw;
+    height: 40vh;
+  }
+
+  #bannerimage {
+    width: 100vw;
+    height: 40vh;
+    object-fit: cover;
+  }
+
+  #singleBusiness {
+    background-color: white;
+    padding-bottom: 78px;
+  }
+
+  #text-Name {
+    font-size: 25px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    color: #182c3a;
+  }
+
+  #BusinessName {
+    background-color: rgb(93, 155, 176);
+    text-align: center;
+    font-size: 5px;
+    padding-top: 2%;
+    font-family: "Montserrat", sans-serif;
+    padding-bottom: 1%;
+  }
+
+  #wrapper {
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 16px;
+    text-align: center;
+    text-justify: inter-word;
+  }
+
+  #description-business {
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    text-align: center;
+    text-justify: auto;
+    align-items: center;
+  }
+
+  #list-hours {
+    margin-top: 5%;
+    display: block;
+    text-align: center;
+  }
+
+  #list-days {
+    text-align: justify;
+    margin-left: 20%;
+    display: block;
+    text-justify: inter-character;
+  }
+
+  #list-hours-title {
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: thin;
+    color: #182c3a;
+    margin-bottom: 5%;
+  }
+
+  #business-price-range {
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    color: #182c3a;
+  }
+
+  #horizontal {
+    width: 80%;
+    height: 3px;
+    background-color: black;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 25px;
+    margin-bottom: 20px;
+    align-content: center;
+    background-color: #5d9bb0;
+  }
+
+  #review-title {
+    font-size: 20px;
+    font-family: "Roboto", sans-serif;
+    color: #182c3a;
+    margin-right: 10%;
+    margin-left: 8%;
+  }
+
+  .text-reviews {
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    /* margin-left: 10%; */
+  }
+
+  #separator {
+    margin-top: 38px;
+    background-color: #5d9bb0;
+  }
+
+  #backToMap {
+    text-align: center;
+    color: #182c3a;
+    font-size: 12px;
+    margin-right: 20px;
+  }
+
+  .stars-review {
+    font-size: 14px;
+    color: #182c3a;
+  }
+
+  .star-icon {
+    font-size: 6px;
+  }
+
+  .link a,
+  a:hover,
+  a:focus,
+  a:active {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  #reviewButton {
+    padding: 2px !important;
+    font-size: 10px !important;
+    color: white !important;
+    box-shadow: none !important;
+    background-color: #5d9bb0 !important;
+    border-radius: 5px !important;
+  }
+}
+
 @media screen and (max-width: 600px) {
   #loader {
-    width: 100vw;
     margin-top: 25%;
   }
 
   #img-carousel {
     width: 100vw;
-    padding-top: 1em;
-    padding-bottom: 1em;
+    height: 25vh;
+    /* padding-top: 1em;
+    padding-bottom: 1em; */
   }
 
   #bg-image-business {
@@ -140,15 +291,16 @@ body {
   }
 
   #bannerimage {
-    padding-top: 10px;
+    width: 100vw;
+    height: 25vh;
+    object-fit: cover;
+    /* padding-top: 10px;
     width: 200px;
-    /* border-radius: 2px; */
     border-radius: 50%;
     height: 200px;
-    /* height: 50%; */
     margin-left: 25%;
     margin-right: auto;
-    padding-bottom: 10px;
+    padding-bottom: 10px; */
   }
 
   #singleBusiness {
